<resources>
    <!-- Strings for Mood Event Item -->
    <string name="username_placeholder">Username</string>
    <string name="reason_why">Reason Why…</string>
    <string name="time_ago">2hrs</string>
    <string name="mood_event_location">University</string>

    <string name="app_name">OTMJ App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="welcome_fragment_label">Welcome Fragment</string>
    <string name="login_fragment_label">Login Fragment</string>
    <string name="signup_fragment_label">Signup Fragment</string>

    <string name="emotional_state_default">EMOTIONAL STATE 😊</string>
    <string name="date_and_time_text">YYYY/MM/DD 00:00:00</string>
    <string name="reason_why_text">Reason Why Text</string>
    <string name="trigger_and_social_situation_text">Triggered by [given trigger] while [social situation]</string>
    <string name="location_text">Location</string>

    <string name="edit_event">Edit this mood event</string>
    <string name="reason_why_image_desc">Reason why image for mood event</string>
    <string name="location_icon_desc">Location associated with this mood event</string>

    <string name="profile_picture">Default profile icon or image uploaded by the user</string>
    <string name="username_text">Username</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="requests">REQUESTS</string>
    <string name="recent_events">RECENT EVENTS</string>
    <string name="filter_desc">Initiates filter fragment for mood events list</string>
    <string name="add_icon_desc">Pops the Add mood event fragment</string>
    <string name="recent_week_filter_text">LAST 7 DAYS</string>
    <string name="anger_text">ANGER</string>
    <string name="disgust_text">DISGUST</string>
    <string name="fear_text">FEAR</string>
    <string name="sad_text">SAD</string>
    <string name="confuse_text">CONFUSE</string>
    <string name="shame_text">SHAME</string>
    <string name="happy_text">HAPPY</string>
    <string name="surprise_text">SURPRISE</string>
    <string name="search_reason_why_text">Enter Keyword(s)</string>
    <string name="ic_search_desc">Initiates the search of matching keyword(s) in reason why texts</string>

    <string name="ic_close_desc">Closes a fragment or view</string>
    <string name="record_your_mood">RECORD YOUR MOOD</string>

    <string name="welcome_back_cap">WELCOME BACK!</string>
    <string name="login">LOGIN</string>
    <string name="login_register">DON\'T HAVE AN ACCOUNT?</string>
    <string name="logging_in">LOGGING IN…</string>

    <string name="create_account">CREATE ACCOUNT</string>
    <string name="signup">SIGN UP</string>
    <string name="signing_up">LOADING…</string>
    <string name="username_cap">USERNAME</string>
    <string name="email_cap">EMAIL</string>
    <string name="password_cap">PASSWORD</string>
    <string name="register_login">ALREADY HAVE AN ACCOUNT?</string>

    <string name="send_email_cap">SEND EMAIL</string>
    <string name="forgot_cap">FORGOT YOUR PASSWORD?</string>
    <string name="recovery_code_cap">\t\t\tRECOVERY CODE</string>
    <string name="reset_password_cap">RESET PASSWORD</string>

    <string name="ic_send_desc">Sends a follow request</string>
    <string name="ic_visibility_off_desc">Signals that the current user does not have permission to view recent events of another user</string>
    <string name="send_request_text">REQUEST</string>
    <string name="unfollow_text">UNFOLLOW</string>

    <string name="confirm_request_text">CONFIRM</string>
    <string name="temp_list_title">LIST TITLE</string>
    <string name="whose_mood_cap">WHOSE MOOD DO YOU WANT TO SEE?</string>
    <string name="friend_cap">FRIEND</string>
    <string name="all_cap">ALL</string>
    <string name="mine_cap">MINE</string>
    <string name="filterblock_closingic">Closing button for this filter block</string>

    <!-- Detailed Mood Event Strings -->
    <string name="example_post">User was feeling frustrated because of traffic and delays, with one other person.</string>

    <!-- Create Mood Event Strings -->
    <string name="add_location_text">add location</string>
    <string name="post_button">ADD</string>
    <string name="ic_back_desc">Brings view back to the previous screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_add_image_desc">Button for adding a reason why image</string>
    <string name="ic_add_location_desc">Pins the current location of the user to their mood event</string>
    <string name="alone_text">Alone</string>
    <string name="with_one_person_text">1</string>
    <string name="with_more_than_two_people_text">2+</string>
    <string name="crowd_text">Crowd</string>
    <string name="moodwsing_logo_desc">Moodswing Logo</string>
    <string name="filter_mood_events_in_timeline_desc">Filter mood events</string>
    <string name="mood_event_description">Feeling $1%s</string>
    <string name="reason_why_hint_text">Reason Why</string>
    <string name="trigger_hint_text">Trigger</string>
    <string name="users_profile_picture">User profile picture</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>