<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="8dp"
android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/event_title"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/emotional_state_default"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/edit_event"
            android:layout_width="23dp"
            android:layout_height="24dp"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_edit" />
    </LinearLayout>

<TextView
    android:id="@+id/event_timestamp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/date_and_time_text"
    android:textSize="12sp"
    android:textColor="@color/gray"/>

    <ImageView
        android:id="@+id/event_image"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

<TextView
    android:id="@+id/reason_why"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/reason_why_text"
    android:textSize="12sp"/>

<TextView
    android:id="@+id/event_trigger"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/trigger_and_social_situation_text"
    android:textSize="12sp"
    android:textColor="@color/gray"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_location"/>

        <TextView
            android:id="@+id/event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_text"
            android:textSize="12sp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>
</LinearLayout>
