<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragments.MoodEventDetailsFragment"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/details_profile_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/profile_placeholder"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/details_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/username_text"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/details_unfollow_button"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:backgroundTint="@color/blue_nav_bar"
                android:paddingHorizontal="8dp"
                android:text="@string/unfollow_text"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                android:layout_marginStart="12dp"
                app:icon="@drawable/ic_unfollow"
                app:iconGravity="start"
                app:iconSize="20dp"
                app:iconTint="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/details_event_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_and_time_text"
        android:textColor="@color/gray"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/details_mood_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/reason_why_image_desc"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_event_timestamp" />

    <TextView
        android:id="@+id/details_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mood_event_example_with_full_details"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_mood_image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_event_description">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/location_icon_desc"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/details_event_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/location_text"
            android:textSize="12sp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>