<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="487dp"
        android:layout_centerHorizontal="true"
        android:translationY="-200dp"
        app:srcCompat="@drawable/oval" />

    <TextView
        android:id="@+id/create_acco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="306dp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="359dp"
        android:background="@drawable/ic_edittext"
        android:fontFamily="@font/roboto_medium"
        android:inputType="text"
        android:text="@string/username_cap"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="429dp"
        android:background="@drawable/ic_edittext"
        android:fontFamily="@font/roboto_medium"
        android:inputType="textEmailAddress"
        android:text="@string/email_cap"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="498dp"
        android:background="@drawable/ic_edittext"
        android:fontFamily="@font/roboto_medium"
        android:inputType="textVisiblePassword"
        android:text="@string/password_cap"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signupbutton"
        android:layout_width="344dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="592dp"
        android:backgroundTint="@color/blue_nav_bar"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>